--- a/package.json
+++ b/package.json
@@ -8,22 +8,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0",
-    "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1"
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-redux": "8.0.2",
+    "react-router-dom": "6.3.0",
+    "redux": "4.2.0",
+    "redux-thunk": "2.4.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/react-redux": "^7.1.24",
-    "@types/redux": "^3.6.0",
-    "@types/redux-thunk": "^2.1.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "redux-devtools-extension": "^2.13.9",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.9"
+    "@types/react": "18.0.0",
+    "@types/react-dom": "18.0.0",
+    "@types/react-redux": "7.1.24",
+    "@types/redux": "3.6.0",
+    "@types/redux-thunk": "2.1.0",
+    "@vitejs/plugin-react": "1.3.0",
+    "redux-devtools-extension": "2.13.9",
+    "typescript": "4.6.3",
+    "vite": "2.9.9"
   }
 }
