--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/redux-thunk": "2.1.0",
     "@vitejs/plugin-react": "1.3.0",
     "redux-devtools-extension": "2.13.9",
+    "sass": "1.52.2",
     "typescript": "4.6.3",
     "vite": "2.9.9"
   }
