--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "vite --open",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "rm -rf ./dist && npm run build",
+    "deploy": "firebase deploy --only hosting"
   },
   "dependencies": {
     "@chakra-ui/react": "2.2.0",
